--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
+venv/
+__pycache__/
+*.pkl
+*.pyc
+*.ipynb_checkpoints/
+.DS_Store
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
